# crisp_py

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  data.yaml  pixi.toml  pyproject.toml  release-please-config.json  release-please-manifest.json  set_ros_env.sh
.github/workflows/: pixi_ci.yml  release.yaml  ruff_ci.yml
config/: aloha-gripper.yaml  gravity_compensation.yaml  gripper_config_2025-05-15-11-46.yaml  gripper_left.yaml  gripper_right.yaml  gripper_right_config_v2.yaml  gripper_with_trigger.yaml  trigger.yaml
config/control/: clipped_cartesian_impedance.yaml  default_cartesian_impedance.yaml  default_operational_space_controller.yaml  dynaarm_cic_soft.yaml  dynaarm_gravity.yaml  gravity_compensation.yaml  gravity_compensation_on_fix_position.yaml  gravity_compensation_on_plane.yaml  joint_control.yaml  joint_velocity_control.yaml
config/rmw/: cyclone_config.xml  humble_zenoh_router_config.json5
crisp_py/: __init__.py  robot.py  robot_config.py
crisp_py/camera/: __init__.py  camera.py  camera_config.py
crisp_py/config/: __init__.py  gripper_right.yaml  path.py  trigger_left.yaml
crisp_py/config/cameras/: right_wrist_camera.yaml  third_person_camera.yaml  wrist_camera.yaml
crisp_py/config/control/: gravity_compensation.yaml  joint_control.yaml  no_friction_cartesian_impedance.yaml
crisp_py/config/grippers/: gripper_franka.yaml  gripper_left_config.yaml  gripper_right_config.yaml  gripper_robotiq_2f85.yaml  gripper_with_trigger.yaml
crisp_py/config/robots/: dynaarm.yaml  fr3.yaml  fr3_left.yaml  fr3_right.yaml  iiwa14.yaml  panda.yaml  ur.yaml
crisp_py/config/sensors/: anyskin_sensor.yaml  force_torque_sensor.yaml  mock_force_torque_sensor.yaml
crisp_py/control/: __init__.py  controller_switcher.py  joint_trajectory_controller_client.py  parameters_client.py
crisp_py/gripper/: __init__.py  gripper.py  gripper_client.py  gripper_config.py
crisp_py/robot/: __init__.py  robot.py  robot_config.py
crisp_py/sensors/: __init__.py  float32_array_sensor.py  force_torque_sensor.py  sensor.py  sensor_config.py
crisp_py/utils/: __init__.py  callback_monitor.py  diagnostics_viewer.py  freshness_checker.py  geometry.py  sliding_buffer.py  tf_pose.py
docs/: how_to_crisp.md  how_to_grip.md  setup_cyclonedds.md
examples/: 00_gravity_compensation.py  01_figure_eight.py  02_joint_control.py  03_getting_and_setting_parameters.py  04_sporadic_poses.py  05_dual_arm.py  06_franka_gripper.py  06_gripper.py  06_rotate_around_z_axis.py  07_camera_example.py  07_camera_example_single_frame.py  08_gripper.py  08_sensor_example.py  09_get_twist.py  09_manual_calibration.py  10_gripper_teleop.py  10_tf_pose.py  11_control_tests.py  11_sporadic_poses.py  12_franka_gripper.py  13_camera_example.py  13_camera_example_stream.py  14_sensor_example.py  14_so101_example.py  14_viser_example.py  16_get_twist.py  18_aloha_gripper.py  19_robotiq_gripper.py  1_figure_eight.py  20_infinite_figure.py  2_joint_control.py  3_getting_and_setting_parameters.py  4_sporadic_poses.py  5_dual_arm.py  6_rotate_around_z_axis.py  7_apply_force.py  8_gripper.py  97_test_shutdown_multiple.py  98_trigger_and_gripper.py  99_control_tests.py  (+10 more)
scripts/: check_config.py  gripper_manual_calibration.py  set_cyclone_config.sh  set_ros_env.sh  set_zenoh_config.sh  view_diagnostics.py
scripts/mock/: README.md  mock_camera.py  mock_float32_array_sensor.py  mock_force_torque_sensor.py  mock_franka_robot.py  mock_gripper.py
tests/: __init__.py
tests/unit/: __init__.py  test_camera.py  test_gripper.py  test_pose.py  test_robot.py  test_robot_config.py  test_sensor.py
