[project]
name = "crisp-python"
version = "1.5.1"
description = "Simple python interface to control robots that use crisp_controllers and other ROS2 components."
readme = "README.md"
license-files = ["LICENSE.md"]
requires-python = ">=3.11"
dependencies = [
    "scipy",
    "numpy<=2.3"
]

[project.urls]
Homepage = "https://utiasDSL.github.io/crisp_controllers/"

[tool.setuptools.packages.find]
exclude = ["config", "examples", "build", "scripts", "media", "docs", "tests"]
include = ["crisp_py*"]

[tool.setuptools]
include-package-data = true

[tool.ruff]
exclude = [
    "examples",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
]

line-length = 100
indent-width = 4
target-version = "py311"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "D", "TCH", "ANN"]
ignore = ["ANN401"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

